[package]
name = "residuals"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.34.1"
toml	 = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
hotpath = { version = "0.5", optional = true }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-self = ["hotpath/hotpath-alloc-self"]
hotpath-off = ["hotpath/hotpath-off"]
